--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li class="MsoNormal">Instructor: Prof. <a href="http://cs.jhu.edu/~ayuille">Alan Yuille</a>, <a href="mailto:ayuille1@jhu.edu." target="_blank" rel="noopener">ayuille1@jhu.edu. </a></li>
     <li class="MsoNormal">TAs: <strong>Wufei Ma</strong> (wma27@jhu.edu), <strong>Tiezheng Zhang</strong> (tzhang85@jhu.edu)</li>
     <li class="MsoNormal">CAs: <strong>Siyi Chen</strong> (schen357@jhu.edu)</li>
-    <li class="MsoNormal">Office hours (OH): 
+    <li class="MsoNormal">Office hours (OH):
         <ul>
             <li>Wufei Ma: <strong>TBD</strong></li>
             <li>Tiezheng Zhang: <strong>TBD</strong></li>
@@ -26,11 +26,11 @@
         </ul>
     </li>
 </ul>
+<p><img src="https://web.archive.org/web/20091027074054im_/http://geocities.com/sewntell2/new04.gif" style="height: 18px;"> <b>Research intern opportunity.</b> We are looking for multiple research interns to join <a href="https://ccvl.jhu.edu/">our group</a> and work on projects related to: (1) simulation environment, and (2) 3D-aware VLMs. Please send an email to Prof. Yuille and cc TAs if you are interested.</p>
 <h3>Homework</h3>
 <ul>
     <li><strong style="color: red">You will be invited to Gradescope soon once the first homework is released.</strong></li>
 </ul>
-<p>&nbsp;</p>
 <h3>Reading Material</h3>
 <ul>
     <li class="MsoNormal">Course notes and course readings (posted online).</li>
