--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
             <td style="vertical-align: top; height: 78px; width: 44.197%;">Stereo Vision</td>
             <td style="vertical-align: top; height: 78px; width: 20.9847%;">
                 <p>
-                    <a href="files/Lecture5StereoVision.pdf">Lecture5</a>
+                    <a href="files/VisionAsBayesianInference.pdf">Lecture5(Part 1)</a>
+                    <br />
+                    <a href="files/RegressionYuilleKersten.pdf">Lecture5(Part 2)</a>
                     <br />
                 </p>
             </td>
