--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
             </td>
             <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
         </tr>
+        <tr style="height: 78px;">
+            <td style="vertical-align: top; height: 78px; width: 13.0129%;">2 (09/11/2025)</td>
+            <td style="vertical-align: top; height: 78px; width: 44.197%;"> Bayesian Inference</td>
+            <td style="vertical-align: top; height: 78px; width: 20.9847%;"><a href="files/BayesDecisionTheory.pdf">Lecture6 (Part 1)</a><br /><a href="files/BayesianEdgeDetection.pdf">Lecture6 (Part 2)</a></td>
+            <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
+        </tr>
     </tbody>
 </table>
 <p><br /><br /></p>
