--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </li>
 </ul>
 <p><img src="https://web.archive.org/web/20091027074054im_/http://geocities.com/sewntell2/new04.gif" style="height: 18px;"> <b>Research intern opportunity.</b> We are looking for multiple research interns to join <a href="https://ccvl.jhu.edu/">our group</a> and work on projects related to: (1) simulation environment, and (2) 3D-aware VLMs. Please send an email to Prof. Yuille and cc TAs if you are interested.</p>
-<h3>Homework</h3>
+<h3>Homework(Gradescope Entry code:X2D2E3)</h3>
+<p>Gradescope entry code: X2D2E3</p>
 <ul>
     <li><a href="homework_1/Homework1.pdf">Homework 1</a></li>
 </ul>
@@ -97,15 +98,16 @@
             <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
         </tr>
         <tr style="height: 78px;">
-            <td style="vertical-align: top; height: 78px; width: 13.0129%;">2 (09/11/2025)</td>
+            <td style="vertical-align: top; height: 78px; width: 13.0129%;">6 (09/11/2025)</td>
             <td style="vertical-align: top; height: 78px; width: 44.197%;"> Bayesian Inference</td>
             <td style="vertical-align: top; height: 78px; width: 20.9847%;"><a href="files/BayesDecisionTheory.pdf">Lecture6 (Part 1)</a><br /><a href="files/BayesianEdgeDetection.pdf">Lecture6 (Part 2)</a></td>
             <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
         </tr>
         <tr style="height: 53px;">
-            <td style="vertical-align: top; height: 53px; width: 13.0129%;">3 (09/16/2025)</td>
+            <td style="vertical-align: top; height: 53px; width: 13.0129%;">7 (09/16/2025)</td>
             <td style="vertical-align: top; height: 53px; width: 44.197%;">Probabilities on Graphs - Directed and Undirected</td>
             <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/Probabilities on Graphs_ Directed and Undirected.pdf">Lecture7</a></td>
+            <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
         </tr>
     </tbody>
 </table>
