--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </li>
 </ul>
 <p><img src="https://web.archive.org/web/20091027074054im_/http://geocities.com/sewntell2/new04.gif" style="height: 18px;"> <b>Research intern opportunity.</b> We are looking for multiple research interns to join <a href="https://ccvl.jhu.edu/">our group</a> and work on projects related to: (1) simulation environment, and (2) 3D-aware VLMs. Please send an email to Prof. Yuille and cc TAs if you are interested.</p>
-<h3>Homework(Gradescope Entry code:X2D2E3)</h3>
+<h3>Homework</h3>
 <p>Gradescope entry code: X2D2E3</p>
 <ul>
     <li><a href="homework_1/Homework1.pdf">Homework 1</a></li>
@@ -72,7 +72,7 @@
         <tr style="height: 53px;">
             <td style="vertical-align: top; height: 53px; width: 13.0129%;">3 (09/02/2025)</td>
             <td style="vertical-align: top; height: 53px; width: 44.197%;">Linear Filtering</td>
-            <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/LinearFilteringYuilleKersten.pdf">LinearFilteringYuilleKersten</a><br /> <a href="files/Lecture3LinearFilteringKokkinos.pdf">Lecture3LinearFilteringKokkinos</a></td>
+            <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/Lecture3 (Part1).pdf">LinearFilteringYuilleKersten</a><br /> <a href="files/Lecture3 (Part2).pdf">Lecture3LinearFilteringKokkinos</a></td>
             <td style="vertical-align: top; height: 78px; width: 2.57921%;"><a href="additionalreading/HebbianYuilleKersten.pdf">HebbianYuilleKersten</a><br /><a href="additionalreading/SparsityYuilleKersten.pdf">SparsityYuilleKersten</a><br /><a href="additionalreading/SparsityPowerpoints.pdf">SparsityPowerpoints</a></td>
 
         </tr>
