--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <tr style="height: 53px;">
             <td style="vertical-align: top; height: 53px; width: 13.0129%;">7 (09/16/2025)</td>
             <td style="vertical-align: top; height: 53px; width: 44.197%;">Probabilities on Graphs - Directed and Undirected</td>
-            <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/Probabilities on Graphs_ Directed and Undirected.pdf">Lecture7</a></td>
+            <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/Probabilities for Cue Combination.pdf">Lecture7</a></td>
             <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
         </tr>
     </tbody>
