--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
             <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/Probabilities for Cue Combination.pdf">Lecture7</a></td>
             <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
         </tr>
+        <tr style="height: 53px;">
+            <td style="vertical-align: top; height: 53px; width: 13.0129%;">9 (09/18/2025)</td>
+            <td style="vertical-align: top; height: 53px; width: 44.197%;">Probabilities on Graphs - Directed II</td>
+            <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/ProbabilitiesOnGraphs Directed II.pdf">Lecture8</a></td>
+            <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
+        </tr>
     </tbody>
 </table>
 <p><br /><br /></p>
