--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <tr style="height: 53px;">
             <td style="vertical-align: top; height: 53px; width: 13.0129%;">3 (09/02/2025)</td>
             <td style="vertical-align: top; height: 53px; width: 44.197%;">Linear Filtering</td>
-            <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/Lecture3 (Part1).pdf">LinearFilteringYuilleKersten</a><br /> <a href="files/Lecture3 (Part2).pdf">Lecture3LinearFilteringKokkinos</a></td>
+            <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/LinearFilteringYuilleKersten.pdf">LinearFilteringYuilleKersten</a><br /> <a href="files/Lecture3LinearFilteringKokkinos.pdf">Lecture3LinearFilteringKokkinos</a></td>
             <td style="vertical-align: top; height: 78px; width: 2.57921%;"><a href="additionalreading/HebbianYuilleKersten.pdf">HebbianYuilleKersten</a><br /><a href="additionalreading/SparsityYuilleKersten.pdf">SparsityYuilleKersten</a><br /><a href="additionalreading/SparsityPowerpoints.pdf">SparsityPowerpoints</a></td>
 
         </tr>
