updated lecture 9 and lecture 10

--- a/index.html
+++ b/index.html
@@ -115,6 +115,19 @@
             <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/ProbabilitiesOnGraphs Directed II.pdf">Lecture8</a></td>
             <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
         </tr>
+                <tr style="height: 53px;">
+            <td style="vertical-align: top; height: 53px; width: 13.0129%;">9 (09/23/2025)</td>
+            <td style="vertical-align: top; height: 53px; width: 44.197%;">Undirected Probabilities on Graphs - Theory</td>
+            <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/Undirected Probabilities on Graphs _ Theory.pdf">Lecture9</a></td>
+            <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
+        </tr>
+                </tr>
+                <tr style="height: 53px;">
+            <td style="vertical-align: top; height: 53px; width: 13.0129%;">10 (09/25/2025)</td>
+            <td style="vertical-align: top; height: 53px; width: 44.197%;">Undirected Probabilities on Graphs - Examples</td>
+            <td style="vertical-align: top; height: 53px; width: 20.9847%;"><a href="files/Undirected Probabilities on Graphs _ Examples.pdf">Lecture10</a></td>
+            <td style="vertical-align: top; height: 78px; width: 2.57921%;"></td>
+        </tr>
     </tbody>
 </table>
 <p><br /><br /></p>
