updated office hour

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li>Wufei Ma: <strong>TBD</strong></li>
             <li>Tiezheng Zhang: <strong>TBD</strong></li>
-            <li>Siyi Chen: <strong>TBD</strong></li>
+            <li>Siyi Chen: <strong>Friday 9:00-10:00 AM (Zoom Link <a href="https://JHUBlueJays.zoom.us/j/3396570629">Zoom Link</a>)</strong></li>
         </ul>
         Note: If no one joins within 30 minutes, TAs/CAs may leave early. In-person office hours are available by appointment. Please email us to schedule a time. Any changes will be posted in the "Discussions" section.&nbsp;</li>
 
